<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_trending"
        android:icon="@drawable/ic_trending_up_black_24dp"
        android:title="@string/title_trending" />
    <item
        android:id="@+id/navigation_subscription"
        android:icon="@drawable/ic_subscriptions_black_24dp"
        android:title="@string/title_subscription" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_library_black_24dp"
        android:title="@string/title_library" />

</menu>
